# archsetup

./: README.md  archsetup  iso.sh  pyproject.toml
data/install/: extras.toml
data/postinstall/: apps.toml  desktops.toml  displaymanagers.toml  drivers.toml
locales/: en.toml  tr.toml
src/archsetup/: __init__.py  __main__.py  paths.py
src/archsetup/core/: asus.py  bootloader.py  config.py  data.py  dotfiles.py  env.py  gpuconfig.py  hardware.py  hibernate.py  i18n.py  kmscon.py  network.py  pacman.py  prompt.py  sddm.py  services.py  sysedit.py  tasks.py  virt.py  waydroid.py
src/archsetup/installer/: base.py  bootloaders.py  chroot.py  disk.py  pickers.py  state.py
src/archsetup/ui/: app.py  screens.py
tests/: conftest.py  test_bootloader.py  test_core.py  test_installer.py  test_postinstall.py  test_ui.py
tests/qemu/: README.md  run-vm.sh
