[project]
name = "archsetup"
version = "0.1.0"
description = "Interactive Arch Linux install & post-install TUI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "drpars" }]
dependencies = ["textual>=1.0"]

[project.scripts]
archsetup = "archsetup.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
